--- a/src/app/lectures/lectures.component.css
+++ b/src/app/lectures/lectures.component.css
@@ -31,13 +31,12 @@
   max-height: 100vh;
   overflow-x: auto;
   overflow-y: hidden;
-  width: 400px;
   box-shadow: 0px 6px 20px rgb(32 39 45 / 15%);
 }
 
-@media screen and (min-width: 0px) and (max-width: 768px) {
-  section {
-    width: 100%;
+@media screen and (min-width: 768px) {
+  .section {
+    width: 400px;
   }
 }
 
@@ -109,15 +108,17 @@
 }
 
 .video__control {
-  width: 95%;
+  width: 100%;
+  padding: 2rem;
   height: 550px;
   align-self: center;
   vertical-align: middle;
 }
 @media screen and (min-width: 0px) and (max-width: 768px) {
   .video__control {
-    width: 88%;
+    width: 100%;
     height: 300px;
+    padding: 0rem;
     align-self: center;
     vertical-align: middle;
   }
