--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -6,3 +6,6 @@
 a {
   cursor: pointer;
 }
+.active {
+  font-weight: 500;
+}
